--- a/estate_agent_website/package.json
+++ b/estate_agent_website/package.json
@@ -8,9 +8,11 @@
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "estate_agent_website": "file:",
+    "leaflet": "^1.9.4",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
